Graph Editor Zoom to Mouse Position Does not Work #44432

Closed
opened 2015-04-17 16:10:13 +02:00 by Aaron Carlisle · 24 comments
Member

System Information
Windows 8.0
Intel hd 4600

Blender Version
Broken: 2.74.4

Short description of error
Graph editor Zoom to Mouse Position Does not Work

Exact steps for others to reproduce the error
Enable zoom to mouse position and try using it in the Graph Editor

**System Information** Windows 8.0 Intel hd 4600 **Blender Version** Broken: 2.74.4 **Short description of error** Graph editor Zoom to Mouse Position Does not Work **Exact steps for others to reproduce the error** Enable zoom to mouse position and try using it in the Graph Editor
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @Blendify

Added subscriber: @Blendify

Added subscriber: @mont29

Added subscriber: @mont29

First and foremost, what do you call “Dependency Graph”? Please use real UI terms, Dependency graph is an internal part of the code, not an UI editor or whatever.

If you are referring to the Outliner, this feature is probably not implemented there - and not sure it would really make sense anyway?

First and foremost, what do you call “Dependency Graph”? Please use real UI terms, Dependency graph is an internal part of the code, not an UI editor or whatever. If you are referring to the Outliner, this feature is probably not implemented there - and not sure it would really make sense anyway?
Author
Member

sorry graph editor

sorry graph editor
Aaron Carlisle self-assigned this 2015-04-17 17:50:09 +02:00
Aaron Carlisle changed title from Dependency Graph Zoom to Mouse Position Does not Work to Graph Editor Zoom to Mouse Position Does not Work 2015-04-17 17:51:37 +02:00
Aaron Carlisle removed their assignment 2015-04-17 17:51:37 +02:00

OK, can confirm this is missing there indeed, not sure whether this is a bug or feature request…

OK, can confirm this is missing there indeed, not sure whether this is a bug or feature request…
Author
Member

anyway the graph editor is a good place where this is needed

anyway the graph editor is a good place where this is needed

Added subscriber: @ideasman42

Added subscriber: @ideasman42

This works in recent master and 2.74 release.

Please give a test file and steps to redo.

Marking as incomplete.

This works in recent master and 2.74 release. Please give a test file and steps to redo. Marking as incomplete.

@Campbell does not work for me, not in graph editor…

@Campbell does not work for me, not in graph editor…
Author
Member

enable zoom to mouse position
go to animation graph
try zooming into a particular frame and value

Still does not work

enable zoom to mouse position go to animation graph try zooming into a particular frame and value Still does not work

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Campbell Barton self-assigned this 2015-04-20 21:00:04 +02:00

This works in 2.73, 2.74 and release, tested with normalize, and auto enabled. all work.

closing, can re-open if there is a file showing the problem.

This works in 2.73, 2.74 and release, tested with normalize, and auto enabled. all work. closing, can re-open if there is a file showing the problem.

Changed status from 'Archived' to: 'Open'

Changed status from 'Archived' to: 'Open'

@ideasman42 not quite sure you understood the issue? What normalize or auto has to do here? And really no need for a file, just open default startup, ensure 'zoom to mouse position' is enabled in userprefs, go to grapheditor, try to zoom e.g. on one corner, you'll see zoom only happens centered…

@ideasman42 not quite sure you understood the issue? What normalize or auto has to do here? And really no need for a file, just open default startup, ensure 'zoom to mouse position' is enabled in userprefs, go to grapheditor, try to zoom e.g. on one corner, you'll see zoom only happens centered…

Changed as TODO, think this is only implemented for 3DView currently (at least, that’s what tooltip says), but having this in 2D Editors like graph, NLA, VSE, image or nodes could be handful too!

Changed as TODO, think this is only implemented for 3DView currently (at least, that’s what tooltip says), but having this in 2D Editors like graph, NLA, VSE, image or nodes could be handful too!
Campbell Barton was unassigned by Bastien Montagne 2015-04-20 22:13:51 +02:00
Bastien Montagne self-assigned this 2015-04-20 22:13:51 +02:00
Author
Member

it works in all 2d spaces except the graph editor

it works in all 2d spaces except the graph editor

Meeeh… yes indeed :| Must have messed my quick test somehow…

Meeeh… yes indeed :| Must have messed my quick test somehow…
Author
Member

so it might be more of a bug then a to do as long as its in 2.75 because of all the animation improvements

so it might be more of a bug then a to do as long as its in 2.75 because of all the animation improvements

Turns out I was using Ctrl+MMB which works, but mouse wheel buttons didn't.
Fixing this took less time then reply here, please include all information when reporting bugs, including how you access a tool.

Turns out I was using Ctrl+MMB which works, but mouse wheel buttons didn't. Fixing this took less time then reply here, please include **all information** when reporting bugs, including how you access a tool.

This issue was referenced by 912397756a

This issue was referenced by 912397756a8adfde91e2c307ab9f17d873e002f8

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 912397756a.

Closed by commit 912397756a.
Author
Member

i was using the plus/ minus keys (laptop)

i was using the plus/ minus keys (laptop)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44432
No description provided.