Fix T44432: Zoom to mouse fails /w FCurve editor