source/blender/editors/interface/view2d_ops.c
@@ -661,7 +661,9 @@ static void view_zoomstep_apply_ex(bContext *C, v2dViewZoomData *vzd, const bool
 				const float zoomx = (float)(BLI_rcti_size_x(&v2d->mask) + 1) / BLI_rctf_size_x(&v2d->cur);
 
 				/* only move view to mouse if zoom fac is inside minzoom/maxzoom */
-				if (IN_RANGE_INCL(zoomx, v2d->minzoom, v2d->maxzoom)) {
+				if (((v2d->keepzoom & V2D_LIMITZOOM) == 0) ||
+				    IN_RANGE_INCL(zoomx, v2d->minzoom, v2d->maxzoom))
+				{
 					float mval_fac = (vzd->mx_2d - cur_old.xmin) / BLI_rctf_size_x(&cur_old);
 					float mval_faci = 1.0f - mval_fac;
 					float ofs = (mval_fac * dx) - (mval_faci * dx);
@@ -692,7 +694,9 @@ static void view_zoomstep_apply_ex(bContext *C, v2dViewZoomData *vzd, const bool
 				const float zoomy = (float)(BLI_rcti_size_y(&v2d->mask) + 1) / BLI_rctf_size_y(&v2d->cur);
 
 				/* only move view to mouse if zoom fac is inside minzoom/maxzoom */
-				if (IN_RANGE_INCL(zoomy, v2d->minzoom, v2d->maxzoom)) {
+				if (((v2d->keepzoom & V2D_LIMITZOOM) == 0) ||
+				    IN_RANGE_INCL(zoomy, v2d->minzoom, v2d->maxzoom))
+				{
 					float mval_fac = (vzd->my_2d - cur_old.ymin) / BLI_rctf_size_y(&cur_old);
 					float mval_faci = 1.0f - mval_fac;
 					float ofs = (mval_fac * dy) - (mval_faci * dy);
